progress on island structures, start work on fixing placement for structures